# ad

./: .clang-format  CMakeLists.txt  README.md  main_ad.cpp
